Istio-Lab/Backend/customers-vs-debug.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
    - customers.default.svc.cluster.local
  http:
    - match:
        - headers:
            user-agent:
              exact: debug
      route:
        - destination:
            host: customers.default.svc.cluster.local
            subset: v2
    - route:
        - destination:
            host: customers.default.svc.cluster.local
            subset: v1
